fixed navbar layout overflow

--- a/about/about.css
+++ b/about/about.css
@@ -300,6 +300,7 @@ a {
 }
 
 @media screen and (max-width: 766px) {
+  
   #left-people{
     width: 100%;
   }
@@ -380,7 +381,6 @@ a {
     display: none !important;
   }
 
-
   #navbarTogglerDemo03{
     width: 100%;
     height: 100vh;
@@ -392,6 +392,7 @@ a {
   }
 
   #phone-list{
+    overflow: hidden;
     visibility: visible;
     position: absolute;
     padding: 0;
@@ -404,7 +405,7 @@ a {
     display: block;
     color: black;
     height: auto;
-    width: 100%;
+    width: 90%;
   }
 
   #phone-list li{
